Oops, add xiph_clean_ccflags.m4 and shout.m4 to make dist Add shout.m4 to make install
svn path=/trunk/libshout/; revision=4940

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,8 +5,11 @@ ACLOCAL_AMFLAGS = -I m4
 
 SUBDIRS = include src examples
 
-EXTRA_DIST = README COPYING m4/ac_config_libconfig_in.m4 m4/acx_pthread.m4 \
-	m4/ogg.m4 m4/vorbis.m4
+EXTRA_DIST = README COPYING shout.m4 m4/ac_config_libconfig_in.m4 m4/acx_pthread.m4 \
+	m4/ogg.m4 m4/vorbis.m4 m4/xiph_clean_ccflags.m4
+
+m4datadir = $(datadir)/aclocal
+m4data_DATA = shout.m4
 
 if HAVE_PKGCONFIG
   pkgconfigdir = $(libdir)/pkgconfig
