Install documentation (ie example.c). Real API docs are for another day...
svn path=/trunk/libshout/; revision=4946

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,8 +5,11 @@ ACLOCAL_AMFLAGS = -I m4
 
 SUBDIRS = include src examples
 
-EXTRA_DIST = COPYING INSTALL README shout.m4 m4/ac_config_libconfig_in.m4 \
-	m4/acx_pthread.m4 m4/ogg.m4 m4/vorbis.m4 m4/xiph_clean_ccflags.m4
+EXTRA_DIST = shout.m4 m4/ac_config_libconfig_in.m4 m4/acx_pthread.m4 m4/ogg.m4 \
+	m4/vorbis.m4 m4/xiph_clean_ccflags.m4
+
+docdir = $(datadir)/doc
+doc_DATA = COPYING INSTALL README examples/example.c
 
 m4datadir = $(datadir)/aclocal
 m4data_DATA = shout.m4
@@ -17,13 +20,6 @@ if HAVE_PKGCONFIG
 else
   bin_SCRIPTS = shout-config
 endif
-
-##install-data-local:
-	##mkdir -p $(DESTDIR)$(includedir)/shout
-	##mkdir -p $(DESTDIR)$(prefix)/doc/$(PACKAGE)-$(VERSION)/example
-	##$(INSTALL) -m 0644 README AUTHORS COPYING CHANGES $(DESTDIR)$(prefix)/doc/$(PACKAGE)-$(VERSION)
-	##$(INSTALL) -m 0644 example/Makefile example/example.c $(DESTDIR)$(prefix)/doc/$(PACKAGE)-$(VERSION)/example
-	##$(INSTALL) -m 0644 shout.h $(DESTDIR)$(includedir)/shout
 
 debug:
 	$(MAKE) all CFLAGS="@DEBUG@"
