Oops. Place doc files in $(datadir)/doc/libshout rather than $(datadir)/doc
svn path=/trunk/libshout/; revision=4957

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,7 +8,7 @@ SUBDIRS = include src examples
 EXTRA_DIST = INSTALL shout.m4 m4/ac_config_libconfig_in.m4 m4/acx_pthread.m4 \
 	m4/ogg.m4 m4/vorbis.m4 m4/xiph_clean_ccflags.m4
 
-docdir = $(datadir)/doc
+docdir = $(datadir)/doc/$(PACKAGE)
 doc_DATA = COPYING README examples/example.c
 
 m4datadir = $(datadir)/aclocal
