--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -5,7 +5,7 @@ AUTOMAKE_OPTIONS = foreign
 noinst_PROGRAMS = example
 
 example_SOURCES = example.c
-example_LDADD = ../src/libshout.la $(OGG_LIBS) $(VORBIS_LIBS)
+example_LDADD = ../src/libshout.la $(VORBIS_LIBS)
 AM_CFLAGS = @XIPH_CFLAGS@
 
 INCLUDES = -I$(top_srcdir)/include
