--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.48 2003/06/18 03:55:40 brendan Exp $
+# $Id: configure.in,v 1.49 2003/06/18 11:40:18 karl Exp $
 
 m4_define(libshout_major, 2)
 m4_define(libshout_minor, 0)
@@ -135,7 +135,7 @@ AC_CHECK_FUNCS(getnameinfo getaddrinfo inet_aton)
 dnl Extra dependencies
 
 AC_ARG_ENABLE([pthread],
-  [[  --disable-pthread       do not link with pthread even if it is available]])
+  AC_HELP_STRING([--disable-pthread],[do not link with pthread even if it is available]))
 
 have_thread="no"
 if test "$enable_pthread" != "no"
@@ -162,7 +162,7 @@ dnl If pkgconfig is found, use it and disable shout-config, otherwise do the
 dnl opposite, unless the user overrides.
 
 AC_ARG_ENABLE([pkgconfig],
-  [  --disable-pkgconfig     disable pkgconfig data files (auto)],
+  AC_HELP_STRING([--disable-pkgconfig],[disable pkgconfig data files (auto)]),
   [dopkgconfig="$enableval"], [dopkgconfig="maybe"])
 if test "$dopkgconfig" = "maybe"
 then
