--- a/Makefile.am
+++ b/Makefile.am
@@ -6,7 +6,8 @@ ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = include src examples
 
 EXTRA_DIST = INSTALL shout.m4 m4/ac_config_libconfig_in.m4 m4/acx_pthread.m4 \
-	m4/ogg.m4 m4/vorbis.m4 m4/xiph_compiler.m4
+	m4/ogg.m4 m4/vorbis.m4 m4/xiph_compiler.m4 m4/xiph_net.m4 \
+	m4/xiph_types.m4
 
 docdir = $(datadir)/doc/$(PACKAGE)
 doc_DATA = COPYING README examples/example.c
