--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.51 2003/06/24 01:09:58 brendan Exp $
+# $Id: configure.in,v 1.52 2003/06/24 21:35:44 brendan Exp $
 
 m4_define(libshout_major, 2)
 m4_define(libshout_minor, 0)
@@ -70,70 +70,21 @@ dnl Checks for programs.
 
 dnl Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS([inttypes.h strings.h sys/select.h sys/socket.h sys/uio.h])
+AC_CHECK_HEADERS([strings.h])
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
-
-dnl Check for types
-AC_CHECK_TYPE([uint32_t],
-  [AC_DEFINE(HAVE_C99_INTTYPES, 1, [Define if you have the C99 integer types])],
-  [AC_CHECK_SIZEOF(short)
-   AC_CHECK_SIZEOF(int)
-   AC_CHECK_SIZEOF(long)
-   AC_CHECK_SIZEOF(long long)])
-AH_VERBATIM([X_HAVE_C99_INTTYPES],
-  [#ifndef HAVE_C99_INTTYPES
-#  if SIZEOF_SHORT == 4
-typedef unsigned short uint32_t;
-#  elif SIZEOF_INT == 4
-typedef unsigned int uint32_t;
-#  elif SIZEOF_LONG == 4
-typedef unsigned long uint32_t;
-#  endif
-#  if SIZEOF_INT == 8
-typedef unsigned int uint64_t;
-#  elif SIZEOF_LONG == 8
-typedef unsigned long uint64_t;
-#  elif SIZEOF_LONG_LONG == 8
-typedef unsigned long long uint64_t;
-#  endif
-#endif])
-
-AC_CHECK_TYPES([socklen_t],,,
-  [#if HAVE_SYS_TYPES_H
-# include <sys/types.h>
-#endif
-#if HAVE_SYS_SOCKET_H
-# include <sys/socket.h>
-#endif])
-AH_VERBATIM([X_HAVE_SOCKLEN_T],
-  [#ifndef HAVE_SOCKLEN_T
-typedef int socklen_t;
-#endif])
-
-AC_MSG_CHECKING([how to copy va_list])
-AC_TRY_LINK([#include <stdarg.h>], [va_list ap1, ap2; va_copy(ap1, ap2);],
-        AC_MSG_RESULT([va_copy]),
-        [ AH_TEMPLATE([va_copy], [define if va_copy is not available])
-        AC_TRY_LINK([#include <stdarg.h>], [va_list ap1, ap2; __va_copy(ap1, ap2);],
-            [ AC_DEFINE([va_copy], [__va_copy])
-            AC_MSG_RESULT([__va_copy])],
-            [ AC_DEFINE([va_copy(dest,src)], [memcpy(&dest,&src,sizeof(va_list))])
-            AC_MSG_RESULT([memcpy])]
-            )
-        ])
+XIPH_C99_INTTYPES
 
 dnl Checks for library functions.
-AC_CHECK_FUNCS(nanosleep)
-AC_CHECK_FUNCS(sethostent endhostent)
-AC_SEARCH_LIBS([inet_pton], [socket],
-  [AC_DEFINE([HAVE_INET_PTON], [1], [Define if you have the inet_pton function])],
-  [], [-lnsl])
-AC_CHECK_FUNCS(getnameinfo getaddrinfo inet_aton)
+AC_SEARCH_LIBS([nanosleep], [rt],
+  [AC_DEFINE([HAVE_NANOSLEEP], [1],
+    [Define if you have the nanosleep function])])
+
+dnl Module checks
+XIPH_NET
 
 dnl Extra dependencies
-
 AC_ARG_ENABLE([pthread],
   AC_HELP_STRING([--disable-pthread],[do not link with pthread even if it is available]))
 
@@ -177,8 +128,9 @@ AM_CONDITIONAL([HAVE_PKGCONFIG], [test "$PKGCONFIG" != "no"])
 # Build shout-config, shout.pc
 SHOUT_VERSION="$VERSION"
 SHOUT_LIBS="-lshout"
-XIPH_CLEAN_CCFLAGS([$VORBIS_LIBS $PTHREAD_LIBS], [SHOUT_LIBDEPS])
-XIPH_CLEAN_CCFLAGS([$VORBIS_CFLAGS $PTHREAD_CFLAGS $PTHREAD_CPPFLAGS], [SHOUT_CFLAGS])
+XIPH_CLEAN_CCFLAGS([$VORBIS_LIBS $PTHREAD_LIBS $LIBS], [SHOUT_LIBDEPS])
+XIPH_CLEAN_CCFLAGS([$VORBIS_CFLAGS $PTHREAD_CFLAGS $PTHREAD_CPPFLAGS],
+  [SHOUT_CFLAGS])
 AC_SUBST(SHOUT_LIBDEPS)
 AC_SUBST(SHOUT_CFLAGS)
 AC_CONFIG_LIBCONFIG_IN_STATIC
