Add a name mangling mechanism so we can safely compile in code we share with applications that might link with use. Currently only hooked up for the timing liblet, but thread is the real target.
Basically we define _mangle() in config.h, and use that in timing.h (if available) to prepend the package name to all the symbols in the header and including C files. It's thus fairly invisible.

Unfortunately the prefix is hardwired, so it's another thing that has to be maintained by hand (not that is changes often, but we can't make it a macro). AH_VERBATIM seems to be the only way to add a macro that takes arguments, and it explicitly doesn't do shell expansion. Further, @PACKAGE@ substitution doesn't happen on config.h.in. Insert standard autotools frustration here.

svn path=/trunk/libshout/; revision=5060

--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.58 2003/07/04 02:20:41 brendan Exp $
+# $Id: configure.in,v 1.59 2003/07/04 23:18:26 giles Exp $
 
 m4_define(libshout_major, 2)
 m4_define(libshout_minor, 0)
@@ -25,6 +25,13 @@ VERSION=libshout_version
 
 AM_INIT_AUTOMAKE([libshout], libshout_version)
 AM_MAINTAINER_MODE
+
+dnl create our name mangling macro
+dnl the prefix must be hardwired because of AH limitations
+AH_VERBATIM([_mangle], [
+/* name mangling to protect code we share with other libraries */
+#define _mangle(proc) shout ## _ ## proc
+])
 
 AC_PROG_CC
 AM_PROG_LIBTOOL
