Mangle convenience lib prototypes with _shout_ instead of shout_. It makes them more private :) Simplify the macro very slightly.
svn path=/trunk/libshout/; revision=5066

--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.59 2003/07/04 23:18:26 giles Exp $
+# $Id: configure.in,v 1.60 2003/07/05 06:05:13 brendan Exp $
 
 m4_define(libshout_major, 2)
 m4_define(libshout_minor, 0)
@@ -30,7 +30,7 @@ dnl create our name mangling macro
 dnl the prefix must be hardwired because of AH limitations
 AH_VERBATIM([_mangle], [
 /* name mangling to protect code we share with other libraries */
-#define _mangle(proc) shout ## _ ## proc
+#define _mangle(proc) _shout_ ## proc
 ])
 
 AC_PROG_CC
