Irix portability fixes: 1. Don't define _XOPEN_SOURCE, at least with GCC. As ALWAYS, this macro undefines    a lot of the symbols we need. As of libshout 2.1, this define will be moved    into the "if not $GCC" category so we don't have to deal with it so often. 2. Irix defines inet_pton but not sockaddr_storage. We could fake it by using    an in6 structure, but why bother? Just don't check for inet_pton unless    we have struct sockaddr_storage.
svn path=/trunk/libshout/; revision=5087

--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.60 2003/07/05 06:05:13 brendan Exp $
+# $Id: configure.in,v 1.61 2003/07/07 03:39:59 brendan Exp $
 
 m4_define(libshout_major, 2)
 m4_define(libshout_minor, 0)
@@ -44,6 +44,8 @@ case "$ac_cv_host" in
    *openbsd*)
    ;;
    *solaris*)
+   ;;
+   *irix*)
    ;;
    *) AC_DEFINE(_XOPEN_SOURCE, 600, [Define if you have POSIX and XPG specifications])
    ;;
