Forgot to update example for built shout.h (noted by Karl)
svn path=/trunk/libshout/; revision=5130

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -8,4 +8,4 @@ example_SOURCES = example.c
 example_LDADD = ../src/libshout.la $(VORBIS_LIBS)
 AM_CFLAGS = @XIPH_CFLAGS@
 
-INCLUDES = -I$(top_srcdir)/include
+INCLUDES = -I$(top_builddir)/include
