--- a/configure.in
+++ b/configure.in
@@ -1,11 +1,11 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.64 2003/07/11 00:59:56 brendan Exp $
+# $Id: configure.in,v 1.65 2003/07/13 16:36:37 brendan Exp $
 
 m4_define(libshout_major, 2)
 m4_define(libshout_minor, 0)
 m4_define(libshout_micro, 0)
 m4_define(libshout_version,
-  m4_if(libshout_micro, 0, libshout_major.libshout_minor[b3],
+  m4_if(libshout_micro, 0, libshout_major.libshout_minor,
    libshout_major.libshout_minor.libshout_micro))
 
 AC_INIT([libshout], libshout_version, [icecast-dev@xiph.org])
