added appropriate win32 files to the automake Makefiles for inclusion in distributions
svn path=/trunk/libshout/; revision=5797

--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.66 2003/08/04 08:27:58 keegan Exp $
+# $Id: configure.in,v 1.67 2004/01/30 00:17:26 oddsock Exp $
 
 m4_define(libshout_major, 2)
 m4_define(libshout_minor, 0)
@@ -169,4 +169,4 @@ AC_SUBST(XIPH_CFLAGS)
 AC_OUTPUT([Makefile debian/Makefile include/Makefile include/shout/Makefile
   include/shout/shout.h src/Makefile src/net/Makefile src/timing/Makefile
   src/thread/Makefile src/avl/Makefile src/httpp/Makefile doc/Makefile
-  examples/Makefile shout-config shout.pc])
+  examples/Makefile win32/Makefile shout-config shout.pc])
