include win32 specific includes if compiling under windows
svn path=/trunk/libshout/; revision=5799

--- a/include/shout/shout.h.in
+++ b/include/shout/shout.h.in
@@ -22,6 +22,9 @@
 #define __LIBSHOUT_SHOUT_H__
 
 #include <sys/types.h>
+#ifdef WIN32
+#include <os.h>
+#endif
 
 #define SHOUTERR_SUCCESS	(0)
 #define SHOUTERR_INSANE		(-1)
