Move configure.in to configure.ac, since it requires autoconf 2.5 anyway. Add inline check.
svn path=/icecast/trunk/libshout/; revision=7266

--- a/configure.ac
+++ b/configure.ac
@@ -79,6 +79,7 @@ AC_CHECK_HEADERS([strings.h])
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
+AC_C_INLINE
 XIPH_C99_INTTYPES
 
 dnl Checks for library functions.
