Add shout_queuelen to expose the current length in bytes of the write queue. To do this without having to recalculate, I had to create a queue structure to hold the linked list itself and its length. Might be worth putting a pointer to the tail here too.
svn path=/icecast/trunk/libshout/; revision=8144

--- a/include/shout/shout.h.in
+++ b/include/shout/shout.h.in
@@ -159,12 +159,16 @@ int shout_send(shout_t *self, const unsigned char *data, size_t len);
  */
 ssize_t shout_send_raw(shout_t *self, const unsigned char *data, size_t len);
 
+/* return the number of bytes currently on the write queue (only makes sense in
+ * nonblocking mode). */
+ssize_t shout_queuelen(shout_t *self);
+  
 /* Puts caller to sleep until it is time to send more data to the server */
 void shout_sync(shout_t *self);
 
 /* Amount of time in ms caller should wait before sending again */
 int shout_delay(shout_t *self);
-  
+
 /* Sets MP3 metadata.
  * Returns:
  *   SHOUTERR_SUCCESS
