--- a/shout.pc.in
+++ b/shout.pc.in
@@ -10,5 +10,6 @@ cflags_only=@SHOUT_CFLAGS@
 Name: Shout
 Description: Audio streaming library for icecast encoders
 Version: @VERSION@
-Libs: -L${libdir} -lshout @SHOUT_LIBDEPS@
-Cflags: @SHOUT_CPPFLAGS@ @SHOUT_CFLAGS@
+Requires: @SHOUT_REQUIRES@
+Libs: -L${libdir} -lshout
+Cflags: -I${includedir} @PTHREAD_CPPFLAGS@ @SHOUT_CFLAGS@
