William Volkman's speex support patch.
svn path=/icecast/trunk/libshout/; revision=10533

--- a/configure.ac
+++ b/configure.ac
@@ -130,7 +130,25 @@ PKG_CHECK_MODULES(THEORA, theora, [
   ])
 XIPH_VAR_APPEND([XIPH_CPPFLAGS],[$THEORA_CFLAGS])
 XIPH_VAR_PREPEND([XIPH_LIBS],[$THEORA LDFLAGS $THEORA_LIBS])
-AM_CONDITIONAL(HAVE_THEORA, test -n "$THEORA_LIBS")
+AM_CONDITIONAL([HAVE_THEORA], [test -n "$THEORA_LIBS"])
+if test -n "$THEORA_LIBS"
+then
+  AC_DEFINE([HAVE_THEORA], 1, [Define if you want theora streams supported])
+fi
+
+PKG_CHECK_MODULES(SPEEX, speex, [
+    HAVE_SPEEX="yes"
+    SHOUT_REQUIRES="$SHOUT_REQUIRES, speex"
+  ], [
+    XIPH_PATH_SPEEX(, [AC_MSG_WARN([Speex library not found, disabling])])
+  ])
+XIPH_VAR_APPEND([XIPH_CPPFLAGS],[$SPEEX_CFLAGS])
+XIPH_VAR_PREPEND([XIPH_LIBS],[$SPEEX LDFLAGS $SPEEX_LIBS])
+AM_CONDITIONAL([HAVE_SPEEX], [test -n "$SPEEX_LIBS"])
+if test -n "$SPEEX_LIBS"
+then
+  AC_DEFINE([HAVE_SPEEX], 1, [Define if you want speex streams supported])
+fi
 
 dnl pkgconfig/shout-config.
 dnl If pkgconfig is found, use it and disable shout-config, otherwise do the
@@ -167,7 +185,7 @@ SHOUT_LIBS="-lshout"
 
 XIPH_CLEAN_CCFLAGS([$SHOUT_CPPFLAGS], [SHOUT_CPPFLAGS])
 XIPH_CLEAN_CCFLAGS([$SHOUT_CFLAGS], [SHOUT_CFLAGS])
-XIPH_CLEAN_CCFLAGS([$VORBIS_LIBS $THEORA_LIBS $PTHREAD_LIBS $LIBS], [SHOUT_LIBDEPS])
+XIPH_CLEAN_CCFLAGS([$VORBIS_LIBS $THEORA_LIBS $SPEEX_LIBS $PTHREAD_LIBS $LIBS], [SHOUT_LIBDEPS])
 AC_SUBST(PTHREAD_CPPFLAGS)
 AC_SUBST(SHOUT_LIBDEPS)
 AC_SUBST(SHOUT_REQUIRES)
