--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,14 +11,18 @@ if HAVE_THEORA
   MAYBE_THEORA = theora.c
 endif
 
+if HAVE_SPEEX
+  MAYBE_SPEEX = speex.c
+endif
+
 SUBDIRS = avl net timing httpp $(MAYBE_THREAD)
 
 lib_LTLIBRARIES = libshout.la
 libshout_la_LDFLAGS = -version-info 4:0:1
 
-EXTRA_DIST = theora.c
+EXTRA_DIST = theora.c speex.c
 noinst_HEADERS = shout_ogg.h shout_private.h util.h
-libshout_la_SOURCES = shout.c util.c ogg.c vorbis.c mp3.c $(MAYBE_THEORA)
+libshout_la_SOURCES = shout.c util.c ogg.c vorbis.c mp3.c $(MAYBE_THEORA) $(MAYBE_SPEEX)
 AM_CFLAGS = @XIPH_CFLAGS@
 
 libshout_la_LIBADD = net/libicenet.la timing/libicetiming.la avl/libiceavl.la\
