fix install of header, take 9
svn path=/icecast/trunk/libshout/; revision=10992

--- a/include/shout/Makefile.am
+++ b/include/shout/Makefile.am
@@ -2,5 +2,5 @@
 
 AUTOMAKE_OPTIONS = foreign
 
-includedir = $(prefix)/include/shout
+pkgincludedir = $(includedir)/shout
 nodist_include_HEADERS = shout.h
