Fix header installation to use pkgincludedir.
svn path=/icecast/trunk/libshout/; revision=11410

--- a/include/shout/Makefile.am
+++ b/include/shout/Makefile.am
@@ -3,4 +3,4 @@
 AUTOMAKE_OPTIONS = foreign
 
 pkgincludedir = $(includedir)/shout
-nodist_include_HEADERS = shout.h
+nodist_pkginclude_HEADERS = shout.h
