Fix: Cleanup of debian/ leftovers. part two...
This removes a link to debian/ in configure.ac which was removed in
393d0d40850be8fa7c8b4b7e7c5a534d4a6f3ef2. autogen.sh should now
work again. This was not detected by previous commit for some reason
maybe autogen has not rebuild configure for some reason?

--- a/configure.ac
+++ b/configure.ac
@@ -210,7 +210,7 @@ AC_SUBST(PROFILE)
 AC_SUBST(XIPH_CFLAGS)
 AC_SUBST(XIPH_CPPFLAGS)
 
-AC_OUTPUT([Makefile debian/Makefile include/Makefile include/shout/Makefile
+AC_OUTPUT([Makefile include/Makefile include/shout/Makefile
   include/shout/shout.h src/Makefile src/common/net/Makefile src/common/timing/Makefile
   src/common/thread/Makefile src/common/avl/Makefile src/common/httpp/Makefile doc/Makefile
   examples/Makefile win32/Makefile shout.pc])
