Feature branch: Initial commit for TLS support.
This is the first part of commist for TLS support in libshout.
This commit outlines API and adds src/tls.c which sould later
contain the TLS specific parts of libshout.

See: #2152

--- a/configure.ac
+++ b/configure.ac
@@ -185,6 +185,18 @@ fi
 eval shout_includedir="$includedir"
 prefix="$save_prefix"
 
+XIPH_PATH_OPENSSL([
+    XIPH_VAR_APPEND([XIPH_CPPFLAGS],[$OPENSSL_CFLAGS])
+    XIPH_VAR_APPEND([XIPH_LDFLAGS],[$OPENSSL_LDFLAGS])
+    XIPH_VAR_PREPEND([XIPH_LIBS],[$OPENSSL_LIBS])
+    SHOUT_TLS="1"
+    ],
+    [ AC_MSG_NOTICE([SSL disabled!])
+      SHOUT_TLS="0"
+    ])
+AC_SUBST([SHOUT_TLS])
+AM_CONDITIONAL([HAVE_TLS], [test -n "$OPENSSL_LIBS"])
+
 SHOUT_VERSION="$VERSION"
 SHOUT_CPPFLAGS="-I$shout_includedir $VORBIS_CFLAGS $PTHREAD_CPPFLAGS"
 SHOUT_CFLAGS="$PTHREAD_CFLAGS"
