Fix: Support for TLS.
This change adds super basic support for TLS.
The following two important parts are still missing:
* Verify of teh server cert.
* Autodetection of TLS mode.

See: #2152

--- a/configure.ac
+++ b/configure.ac
@@ -204,7 +204,7 @@ SHOUT_LIBS="-lshout"
 
 XIPH_CLEAN_CCFLAGS([$SHOUT_CPPFLAGS], [SHOUT_CPPFLAGS])
 XIPH_CLEAN_CCFLAGS([$SHOUT_CFLAGS], [SHOUT_CFLAGS])
-XIPH_CLEAN_CCFLAGS([$VORBIS_LIBS $THEORA_LIBS $SPEEX_LIBS $PTHREAD_LIBS $LIBS], [SHOUT_LIBDEPS])
+XIPH_CLEAN_CCFLAGS([$VORBIS_LIBS $THEORA_LIBS $SPEEX_LIBS $PTHREAD_LIBS $OPENSSL_LIBS $OPENSSL_LIBS $LIBS], [SHOUT_LIBDEPS])
 AC_SUBST(PTHREAD_CPPFLAGS)
 AC_SUBST(SHOUT_LIBDEPS)
 AC_SUBST(SHOUT_REQUIRES)
@@ -221,6 +221,7 @@ AC_SUBST(CFLAGS)
 AC_SUBST(PROFILE)
 AC_SUBST(XIPH_CFLAGS)
 AC_SUBST(XIPH_CPPFLAGS)
+AC_SUBST(XIPH_LIBS)
 
 AC_OUTPUT([Makefile include/Makefile include/shout/Makefile
   include/shout/shout.h src/Makefile src/common/net/Makefile src/common/timing/Makefile
