--- a/include/shout/shout.h.in
+++ b/include/shout/shout.h.in
@@ -38,7 +38,7 @@
 #define SHOUTERR_UNCONNECTED		(-8) /* Not connected */
 #define SHOUTERR_UNSUPPORTED		(-9) /* This libshout doesn't support the requested option */
 #define SHOUTERR_BUSY			(-10) /* Socket is busy */
-#define SHOUTERR_NOTLS                  (-11) /* TLS request but not supported by peer */
+#define SHOUTERR_NOTLS                  (-11) /* TLS requested but not supported by peer */
 #define SHOUTERR_TLSBADCERT             (-12) /* TLS connection can not be established because of bad certificate */
 
 #define SHOUT_FORMAT_OGG		(0) /* application/ogg */
@@ -121,7 +121,7 @@ unsigned short shout_get_port(shout_t *self);
 int shout_set_agent(shout_t *self, const char *agent);
 const char *shout_get_agent(shout_t *self);
 
-int shout_set_tls(shout_t *self, int enable);
+int shout_set_tls(shout_t *self, int mode);
 int shout_get_tls(shout_t *self);
 
 int shout_set_ca_directory(shout_t *self, const char *directory);
