--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,7 +30,7 @@ libshout_la_SOURCES = shout.c util.c ogg.c vorbis.c mp3.c webm.c opus.c $(MAYBE_
 AM_CFLAGS = @XIPH_CFLAGS@
 
 libshout_la_LIBADD = common/net/libicenet.la common/timing/libicetiming.la common/avl/libiceavl.la\
-		common/httpp/libicehttpp.la $(MAYBE_THREAD_LIB) $(THEORA_LIBS) $(VORBIS_LIBS) $(SPEEX_LIBS) $(OPENSSL_LIBS)
+		common/httpp/libicehttpp.la $(MAYBE_THREAD_LIB) $(THEORA_LIBS) $(VORBIS_LIBS) $(SPEEX_LIBS) @XIPH_LIBS@
 
 INCLUDES = -I$(top_builddir)/include -I./common/
 
