--- a/include/shout/shout.h.in
+++ b/include/shout/shout.h.in
@@ -3,7 +3,7 @@
  *  API for libshout, the streaming library for icecast
  *
  *  Copyright (C) 2002-2003 the Icecast team <team@icecast.org>,
- *  Copyright (C) 2012      Philipp "ph3-der-loewe" Schafft <lion@lion.leolix.org>
+ *  Copyright (C) 2012-2015 Philipp "ph3-der-loewe" Schafft <lion@lion.leolix.org>
  *
  *  This library is free software; you can redistribute it and/or
  *  modify it under the terms of the GNU Library General Public
