--- a/include/shout/shout.h.in
+++ b/include/shout/shout.h.in
@@ -122,15 +122,27 @@ unsigned short shout_get_port(shout_t *self);
 int shout_set_agent(shout_t *self, const char *agent);
 const char *shout_get_agent(shout_t *self);
 
+/* See SHOUT_TLS_* above */
 int shout_set_tls(shout_t *self, int mode);
 int shout_get_tls(shout_t *self);
 
+/* Set the directory for CA certs. Default: operating system's default */
 int shout_set_ca_directory(shout_t *self, const char *directory);
 const char *shout_get_ca_directory(shout_t *self);
 
+/* Set a CA cert for checking. If you use a self signed server cert
+ * you can pass this cert using this function for verification.
+ * Default: operating system's default */
 int shout_set_ca_certificate(shout_t *self, const char *certificate);
 const char *shout_get_ca_certificate(shout_t *self);
 
+/* Set list of allowed ciphers.
+ * This function should only be used in case of using an old libshout
+ * after some attacks got known. Watch the icecast mailinglist for
+ * known problems.
+ * DO NOT SET THIS TO ANY FIXED VALUE. IF YOU USE THIS FUNCTION
+ * EXPOSE IT TO THE USER. OTHERWISE YOU WILL HARM SECURITY.
+ * Default: internal list of secure ciphers. */
 int shout_set_allowed_ciphers(shout_t *self, const char *ciphers);
 const char *shout_get_allowed_ciphers(shout_t *self);
 
@@ -141,6 +153,9 @@ const char *shout_get_user(shout_t *self);
 int shout_set_password(shout_t *, const char *password);
 const char *shout_get_password(shout_t *self);
 
+/* Set a client certificate for TLS connections.
+ * This must be in PEM format with both cert and private key in the same file.
+ * Default: none. */
 int shout_set_client_certificate(shout_t *self, const char *certificate);
 const char *shout_get_client_certificate(shout_t *self);
 
