--- a/include/shout/shout.h.in
+++ b/include/shout/shout.h.in
@@ -130,11 +130,11 @@ int shout_get_tls(shout_t *self);
 int shout_set_ca_directory(shout_t *self, const char *directory);
 const char *shout_get_ca_directory(shout_t *self);
 
-/* Set a CA cert for checking. If you use a self signed server cert
+/* Set a CA cert file for checking. If you use a self signed server cert
  * you can pass this cert using this function for verification.
  * Default: operating system's default */
-int shout_set_ca_certificate(shout_t *self, const char *certificate);
-const char *shout_get_ca_certificate(shout_t *self);
+int shout_set_ca_file(shout_t *self, const char *file);
+const char *shout_get_ca_file(shout_t *self);
 
 /* Set list of allowed ciphers.
  * This function should only be used in case of using an old libshout
