--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -26,7 +26,7 @@ libshout_la_LDFLAGS = -version-info 5:0:2
 
 EXTRA_DIST = theora.c speex.c tls.c
 noinst_HEADERS = shout_ogg.h shout_private.h util.h
-libshout_la_SOURCES = shout.c util.c ogg.c vorbis.c mp3.c webm.c opus.c $(MAYBE_THEORA) $(MAYBE_SPEEX) $(MAYBE_TLS)
+libshout_la_SOURCES = shout.c util.c queue.c proto_http.c proto_xaudiocast.c proto_icy.c ogg.c vorbis.c mp3.c webm.c opus.c $(MAYBE_THEORA) $(MAYBE_SPEEX) $(MAYBE_TLS)
 AM_CFLAGS = @XIPH_CFLAGS@
 
 libshout_la_LIBADD = common/net/libicenet.la common/timing/libicetiming.la common/avl/libiceavl.la\
