--- a/configure.ac
+++ b/configure.ac
@@ -73,6 +73,7 @@ dnl Checks for programs.
 
 dnl Checks for header files.
 AC_HEADER_STDC
+AC_HEADER_TIME
 AC_CHECK_HEADERS([strings.h sys/timeb.h])
 
 dnl Checks for typedefs, structures, and compiler characteristics.
