Fix autotools warnings
This fixes a few autoconf warnings left.
Thanks to fairch for providing the patch.

Closes: #2243

--- a/configure.ac
+++ b/configure.ac
@@ -21,7 +21,7 @@ AC_DEFINE([LIBSHOUT_MICRO], libshout_micro, [Shout library patch version])
 
 VERSION=libshout_version
 
-AM_INIT_AUTOMAKE([libshout], libshout_version)
+AM_INIT_AUTOMAKE
 AM_MAINTAINER_MODE
 
 dnl create our name mangling macro
