--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,12 +30,11 @@ PROTOCOLS=proto_http.c proto_xaudiocast.c proto_icy.c proto_roaraudio.c
 FORMATS=format_ogg.c format_webm.c format_mp3.c
 CODECS=codec_vorbis.c codec_opus.c $(MAYBE_THEORA) $(MAYBE_SPEEX)
 libshout_la_SOURCES = shout.c util.c queue.c $(PROTOCOLS) $(FORMATS) $(CODECS) $(MAYBE_TLS)
-AM_CFLAGS = @XIPH_CFLAGS@
+AM_CFLAGS = @XIPH_CFLAGS@ -I$(top_builddir)/include -I$(srcdir)/common/
 
 libshout_la_LIBADD = common/net/libicenet.la common/timing/libicetiming.la common/avl/libiceavl.la\
 		common/httpp/libicehttpp.la $(MAYBE_THREAD_LIB) $(THEORA_LIBS) $(VORBIS_LIBS) $(SPEEX_LIBS) @XIPH_LIBS@
 
-INCLUDES = -I$(top_builddir)/include -I$(srcdir)/common/
 
 debug:
 	$(MAKE) all CFLAGS="@DEBUG@"
