--- a/configure.ac
+++ b/configure.ac
@@ -134,7 +134,7 @@ PKG_CHECK_MODULES(THEORA, theora, [
   ])
 fi
 XIPH_VAR_APPEND([XIPH_CPPFLAGS],[$THEORA_CFLAGS])
-XIPH_VAR_PREPEND([XIPH_LIBS],[$THEORA LDFLAGS $THEORA_LIBS])
+XIPH_VAR_PREPEND([XIPH_LIBS],[$THEORA_LDFLAGS $THEORA_LIBS])
 AM_CONDITIONAL([HAVE_THEORA], [test -n "$THEORA_LIBS"])
 if test -n "$THEORA_LIBS"
 then
@@ -153,7 +153,7 @@ PKG_CHECK_MODULES(SPEEX, speex, [
   ])
 fi
 XIPH_VAR_APPEND([XIPH_CPPFLAGS],[$SPEEX_CFLAGS])
-XIPH_VAR_PREPEND([XIPH_LIBS],[$SPEEX LDFLAGS $SPEEX_LIBS])
+XIPH_VAR_PREPEND([XIPH_LIBS],[$SPEEX_LDFLAGS $SPEEX_LIBS])
 AM_CONDITIONAL([HAVE_SPEEX], [test -n "$SPEEX_LIBS"])
 if test -n "$SPEEX_LIBS"
 then
